--- a/src/modules/i18n/languages/en.json
+++ b/src/modules/i18n/languages/en.json
@@ -50,12 +50,14 @@
     "dashboard.coming_soon": "Coming soon",
     "dashboard.info1": "Avalanche Chain",
     "dashboard.info2": "Cronos Chain",
+    "home.portfolios": "Portfolios",
     "wallet.wallet": "Wallet",
     "wallet.send": "Send",
     "wallet.transactions": "Transactions",
     "wallet.receive": "Receive",
     "wallet.unconfirmed_tx": "Unconfirmed transaction(s) value:",
     "wallet.buysell": "Buy",
+    "wallet.history": "History",
     "wallet.delete_wallet": "Remove asset",
     "wallet.alert_delete_wallet": "Are you sure you want to remove this asset?",
     "wallet.network": "Network",
@@ -69,6 +71,7 @@
     "wallet.receive.setAmount": "Set amount",
     "wallet.receive.share": "Share",
     "wallet.receive.wallet": "wallet",
+    "wallet.swap": "Swap",
     "wallet.receive.addressCopied": "address copied",
     "coindetails.change": "Change 24h",
     "coindetails.price": "Price",
@@ -138,6 +141,7 @@
     "tx.available": "Available",
     "tx.confirm": "CONFIRM",
     "tx.max": "MAX",
+    "tx.commission": "Commission fee",
     "search.add_asset": "Add Custom Token",
     "search.search_assets": "Search asset",
     "custom_token.network_error": "Cannot get contract data. Please check the contract address and the network.",
