--- a/src/modules/i18n/languages/en.json
+++ b/src/modules/i18n/languages/en.json
@@ -94,6 +94,7 @@
     "coindetails.not_available": "Not available",
     "coindetails.already_note": "This asset is already in your portfolio!\nYou can add the asset as an External Wallet and edit the balance manually.",
     "coindetails.already_title": "Already in your portfolio",
+    "coindetails.transactions": "Transactions",
     "market.market": "Market",
     "market.assets": "Assets",
     "market.search_placeholder": "Search in thousands of assets",
@@ -225,6 +226,7 @@
     "hub.category.shops": "Shops",
     "hub.category.dapps": "DApps",
     "hub.category.games": "Games",
+    "swap.title": "Swap",
     "swap.you_pay": "You pay",
     "swap.you_get": "You get",
     "swap.slippage": "Slippage",
@@ -249,7 +251,9 @@
     "swap.error.swap_not_found": "No swap currently available for this pair!",
     "swap.error.not_enough_balance": "Not enough balance for the swap or for the fees!",
     "swap.error.swap_chain_not_supported": "The chain you request is not supported!",
-    "swap.coingrig_fee": "Coingrig Fee",
+    "swap.commission_fee": "Commission fee",
+    "swap.input_required": "Please fill up the data",
+    "swap.insufficient_asset_liquidity": "Insufficient asset liquidity",
     "nft.description": "Description",
     "nft.no_description": "No Description",
     "nft.created_date": "Created",
