--- a/src/modules/i18n/languages/en.json
+++ b/src/modules/i18n/languages/en.json
@@ -121,6 +121,10 @@
     "settings.unconfirmed": "Display unconfirmed transactions",
     "settings.unconfirmed_txt": "Your total balance will always include unconfirmed transactions value independently of this setting.",
     "settings.change_language": "Change language",
+    "settings.change_pincode": "Change Pin Code",
+    "settings.change_pincode_success": "Your pin code has changed successfully!",
+    "settings.confirm_your_pincode": "Current PIN Code",
+    "settings.new_pincode": "New PIN Code",
     "language.choose_language": "Choose language",
     "language.english": "English",
     "language.french": "French",
